examples/avm-res-storage-storageaccount/0.7.1/submodules/role_assignments/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
<!-- BEGIN\_TF\_DOCS -->
# Internal submodule: role\_assignments

This is an internal submodule used by `terraform-azurerm-avm-res-storage-storageaccount`. Consumers MUST NOT call this submodule directly. Refer to the root module for supported inputs.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.10.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.8)

## Resources

The following resources are used by this module:

- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_scope"></a> [scope](#input\_scope)

Description: (Required) The fully-qualified Azure resource ID at which the role assignments should be created (the parent\_id for the roleAssignment resource).

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_retry"></a> [retry](#input\_retry)

Description: (Optional) Retry configuration applied to every AzAPI resource managed by this module. Defaults to `null` (no custom retry). See AzAPI provider docs for details.

- `error_message_regex` - (Optional) A list of regex patterns matching error messages that trigger a retry. Defaults to `null`.
- `interval_seconds` - (Optional) Initial interval between retries in seconds. Defaults to `null` (provider default).
- `max_interval_seconds` - (Optional) Maximum interval between retries in seconds. Defaults to `null` (provider default).

Type:

```hcl
object({
    error_message_regex  = optional(list(string))
    interval_seconds     = optional(number)
    max_interval_seconds = optional(number)
  })
```

Default: `null`

### <a name="input_role_assignment_definition_lookup_enabled"></a> [role\_assignment\_definition\_lookup\_enabled](#input\_role\_assignment\_definition\_lookup\_enabled)

Description: (Optional) Whether the `Azure/avm-utl-interfaces/azure` module should resolve role definition names supplied via `role_definition_id_or_name` by querying the Azure Authorization API. Defaults to `true`. Set to `false` if you only ever supply fully-qualified role definition resource IDs and want to skip the lookup (for example to avoid the API call in air-gapped or permission-restricted environments).

Type: `bool`

Default: `true`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: (Optional) A map of role assignments to create at the supplied scope. Defaults to `{}` (no role assignments). The map key is deliberate so that consumers can manage these resources predictably. Each value supports:

- `role_definition_id_or_name` - (Required) Either the full resource ID of the role definition (`/subscriptions/<sub>/providers/Microsoft.Authorization/roleDefinitions/<id>`) or the role name (e.g. `Storage Blob Data Owner`).
- `principal_id` - (Required) The principal id to assign the role to.
- `description` - (Optional) Description of the role assignment. Defaults to `null`.
- `skip_service_principal_aad_check` - (Optional) Retained for backwards compatibility. Not honoured by AzAPI; left here so the variable shape matches the upstream module. Defaults to `false`.
- `condition` - (Optional) Conditional access expression. Defaults to `null`.
- `condition_version` - (Optional) Conditional access expression version. Required when `condition` is supplied. Defaults to `null`.
- `delegated_managed_identity_resource_id` - (Optional) The resource ID of the delegated managed identity. Defaults to `null`.
- `principal_type` - (Optional) The type of principal. Possible values are `User`, `Group`, `ServicePrincipal`, `ForeignGroup`, and `Device`. Defaults to `null`.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: (Optional) Per-operation timeouts applied to every AzAPI resource managed by this module. Defaults to `null` (provider defaults). Each value is a Go duration string (e.g. `30m`, `1h`).

- `create` - (Optional) Timeout for create operations. Defaults to `null`.
- `read` - (Optional) Timeout for read operations. Defaults to `null`.
- `update` - (Optional) Timeout for update operations. Defaults to `null`.
- `delete` - (Optional) Timeout for delete operations. Defaults to `null`.

Type:

```hcl
object({
    create = optional(string)
    read   = optional(string)
    update = optional(string)
    delete = optional(string)
  })
```

Default: `null`

### <a name="input_tracing_tags_header"></a> [tracing\_tags\_header](#input\_tracing\_tags\_header)

Description: (Optional) User-Agent string injected as the `User-Agent` request header for all AzAPI requests. Pass `local.avm_azapi_header` from the calling module. Defaults to `null` (no custom header).

Type: `string`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The scope at which the role assignments were created. Provided to satisfy the AVM `resource_id` output requirement; this submodule does not own a single backing ARM resource.

### <a name="output_role_assignments"></a> [role\_assignments](#output\_role\_assignments)

Description: Map of role assignment resources keyed by the input map key.

## Modules

The following Modules are called:

### <a name="module_interfaces"></a> [interfaces](#module\_interfaces)

Source: Azure/avm-utl-interfaces/azure

Version: 0.6.0

<!-- END\_TF\_DOCS -->
<!-- END_TF_DOCS -->
